Corregi la intrenacionalizacion corregi el modelo el modulo de servicio al cliente en el administrador con el grafrico

--- a/digital_events_repository/web/SI/administrador/servicioCliente/servicio.xhtml
+++ b/digital_events_repository/web/SI/administrador/servicioCliente/servicio.xhtml
@@ -55,8 +55,8 @@
                                 <div class="card-header card-header-success colorc">
                                     <div class="row">
                                         <div class="col-9">
-                                            <h4 class="card-title">#{administrador_eventos.lbl_grafico_eventos}</h4>
-                                            <p class="card-category">#{administrador_eventos.lbl_aqui_encontraras_grafrico}</p>
+                                            <h4 class="card-title">#{administrador_eventos.lbl_grafico_servicio}</h4>
+                                            <p class="card-category">#{administrador_eventos.lbl_aqui_encontraras_grafricoservicio}</p>
                                         </div>
                                         
                                     </div>
