--- a/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/registrar.xhtml
@@ -43,13 +43,13 @@
                                                     <h:inputText id="nombres" value="#{usuarioController.nuevoUsuario.nombres}"
                                                                  a:type="text" 
                                                                  class="form-control"  
-                                                                 a:placeholder="#{administrador_usuarios.lbl_nombres_usuario}" a:required=""/>
+                                                                 a:placeholder="#{administrador_usuarios.lbl_username}" a:required=""/>
                                                 </div>
                                                 <div class="col-6">
                                                     <h:inputText id="apellidos" value="#{usuarioController.nuevoUsuario.apellidos}" 
                                                                  a:type="text" 
                                                                  class="form-control"  
-                                                                 a:placeholder="#{administrador_usuarios.lbl_apellidos_usuario}" a:required=""/>
+                                                                 a:placeholder="#{administrador_usuarios.lbl_apellido}" a:required=""/>
                                                 </div>
                                             </div>
                                             <div class="form-group row">
@@ -112,7 +112,7 @@
                                                     <h:inputText id="confirmarClave" value="#{usuarioController.confirmarClave}"
                                                                  a:type="password" 
                                                                  class="form-control"  
-                                                                 a:placeholder="#{administrador_usuarios.lbl_confirmar_contraseña}" />
+                                                                 a:placeholder="#{administrador_usuarios.lbl_confirm_password}" />
                                                 </div>
                                             </div>
                                             <div class="form-group row">
