--- a/digital_events_repository/web/landingPage/header.xhtml
+++ b/digital_events_repository/web/landingPage/header.xhtml
@@ -32,7 +32,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#{request.contextPath}/landingPage/servicios.xhtml">
-                            <i class="material-icons">work</i> Servicios
+                            <i class="material-icons">work</i> #{header_landign.lbl_servicios}
                             <div class="ripple-container"></div>
                         </a>
                     </li>
@@ -63,7 +63,7 @@
                     </li>
                     <li class="dropdown nav-item">
                         <a id="ingreso" href="#" class="dropdown-toggle nav-link" data-toggle="dropdown">
-                            <i class="material-icons">person</i> #{header.lbl_into}
+                            <i class="material-icons">person</i> #{header_landign.lbl_into}
                             <div class="ripple-container"></div>
                         </a>
                         <div class="dropdown-menu dropdown-with-icons" aria-labelledby="ingreso">
