--- a/digital_events_repository/web/SI/cliente/inventario/inventario.xhtml
+++ b/digital_events_repository/web/SI/cliente/inventario/inventario.xhtml
@@ -84,7 +84,7 @@
         </script>
     </ui:define>
     <ui:define name="content">
-        <div class="content">
+          <div class="content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
@@ -93,10 +93,10 @@
                                 <div class="card-header card-header-success colorc">
                                     <div class="row">
                                         <div class="col-6">
-                                            <h4 class="card-title">Grafrico Estadistico Inventario</h4>
-                                            <p class="card-category">Aquí encontraras un grafrico estadistico en el cual se muestra la cantidad de materiales que se encuentran en buen estado.</p>
+                                            <h4 class="card-title">#{administrador_inventario.lbl_grafrico_inventario}</h4>
+                                            <p class="card-category">#{administrador_inventario.lbl_aqui_encontraras_grafrico}</p>
                                         </div>
-                                        
+
                                     </div>
                                 </div>
                                 <div class="card-body card-header card-chart card-header-success">
@@ -107,33 +107,64 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="content">
             <div class="container-fluid">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="card">
-                            <div class="card-header card-header-success colorc">
-                                <div class="row">
-                                    <div class="col-9">
-                                        <h4 class="card-title">Inventario</h4>
-                                        <p class="card-category">Aquí encontraras los materiales que se encuentran en el almacen.</p>
+                            <h:form>
+                                <div class="card-header card-header-success colorc">
+                                    <div class="row">
+                                        <div class="col-6">
+                                            <h4 class="card-title">#{administrador_inventario.lbl_materiales_1}</h4>
+                                            <p class="card-category">#{administrador_inventario.lbl_aqui_encontras}</p>
+                                        </div>
+                                        <div class="col-6">
+                                            <h:commandLink class="card-category btn btn-danger btn-flat m-b-30 m-t-30" action="#{inventarioController.export()}" value="PDF">
+                                                <i class="fas fa-file-pdf"></i>
+                                            </h:commandLink>&nbsp;&nbsp;
+                                            <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#" 
+                                                           a:data-toggle="modal" a:data-target="#modalCSV" value="#{administrador_inventario.lbl_cargar_csv}">
+                                                <f:ajax render=":modalCSVContent"/>
+                                                <i class="fas fa-upload"></i>
+                                            </h:commandLink>&nbsp;&nbsp;
+                                            <a class="btn btn-info" href="registrar.xhtml">
+                                                <i class="material-icons movericon">inventory</i>
+                                                <span>#{administrador_inventario.lbl_add_material}</span>
+                                            </a>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                            <div class="card-body">
-                                <div class="table-responsive">
-                                    <h:form prependId="false">
-                                        <h:dataTable class="table table-striped text-center" value="#{inventarioController.materialList}" var="m">
-                                            <h:column><f:facet name="header">ID</f:facet>#{m.id}</h:column>
-                                            <h:column><f:facet name="header">TIPO MATERIAL</f:facet>#{m.tipoMaterial}</h:column>                                                
-                                            <h:column><f:facet name="header">CANTIDAD</f:facet>#{m.cantidad}</h:column>                                                
-                                            <h:column><f:facet name="header">ESTADO</f:facet>#{m.estado}</h:column>                                                 
-                                            <h:column><f:facet name="header">DISPONIBILIDAD</f:facet>#{m.disponilidad.estado}</h:column>
-                                        </h:dataTable>
-                                    </h:form>
+                                <div class="card-body">
+                                    <div class="table-responsive">
+                                        <h:form prependId="false">
+                                            <h:dataTable class="table table-striped text-center" value="#{inventarioController.materialList}" var="m">
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_id}</f:facet>#{m.id}</h:column>
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_type_material_1}</f:facet>#{m.tipoMaterial}</h:column>                                                
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_cantidad_1}</f:facet>#{m.cantidad}</h:column>                                                
+                                                <h:column><f:facet name="header">#{administrador_eventos.lbl_estado}</f:facet>#{m.estado}</h:column>                                                 
+                                                <h:column><f:facet name="header">#{administrador_inventario.lbl_availability_1}</f:facet>#{m.disponilidad.estado}</h:column>                                                 
+                                                <h:column><f:facet name="header">#{administrador_eventos.lbl_options}</f:facet>
+                                                    <h:commandLink class="td-actions text-right btn btn-success" actionListener="#{inventarioController.materialSeleccionado(m)}"
+                                                                   a:data-toggle="modal" a:data-target="#modalEditarMaterial" rel="tooltip" >
+                                                        <f:ajax render=":modalEditarMaterialContent"/>
+                                                        <i class="material-icons">edit</i>
+                                                    </h:commandLink> 
+                                                    <h:commandLink class="td-actions text-right btn btn-danger" actionListener="#{inventarioController.materialSeleccionado(m)}"
+                                                                   a:data-toggle="modal" a:data-target="#modalEliminarMaterial" rel="tooltip" >
+                                                        <f:ajax render=":modalEliminarMaterialContent"/>
+                                                        <i class="material-icons">close</i>
+                                                    </h:commandLink>
+                                                    <h:commandLink class="td-actions text-right btn btn-info" actionListener="#{inventarioController.materialSeleccionado(m)}"
+                                                                   a:data-toggle="modal" a:data-target="#modalImagenMaterial" rel="tooltip" >
+                                                        <f:ajax render=":modalImagenContent"/>
+                                                        <i class="fas fa-file-image"></i>
+                                                    </h:commandLink>
+                                                </h:column>                                                 
+                                            </h:dataTable>
+                                        </h:form>
+                                    </div>
                                 </div>
-                            </div>
+                            </h:form>
                         </div>
                     </div>
                 </div>
@@ -141,62 +172,63 @@
         </div>
 
 
+
     </ui:define>
     <ui:define name="modals-page">
 
         <!--modal editar-->
-        <div class="modal fade" id="modalEditarMaterial" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+             <div class="modal fade" id="modalEditarMaterial" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
             <div class="modal-dialog modal-lg" role="document">
                 <h:form prependId="false">
                     <h:panelGroup id="modalEditarMaterialContent" class="modal-content" layout="block">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title titulom" id="exampleModalLabel">Actualizar Solicitud</h5>
+                                <h5 class="modal-title titulom" id="exampleModalLabel">#{administrador_inventario.lbl_actualizar_imagen_material}</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <h:form prependId="false">
-                                    <div class="form-group row">
-                                        <div class="col-3">
-                                            <label class="control-label mb-1">ID Material:</label>
-                                            <div class="form-control">#{inventarioController.materialSeleccionado.id}</div>
-                                        </div>
-                                        <div class="col-3">
-                                            <label class="control-label mb-1">Tipo Material:</label>
-                                            <h:inputText id="tipoMaterial" value="#{inventarioController.materialSeleccionado.tipoMaterial}"
-                                                         class="form-control" a:type="text"/>
-                                        </div>
-                                        <div class="col-3">
-                                            <label class="control-label mb-1">Cantidad:</label>
-                                            <h:inputText id="cantidad" value="#{inventarioController.materialSeleccionado.cantidad}"
-                                                         class="form-control" a:type="number" maxlength="100" />
-                                        </div>
+
+                                <div class="form-group row">
+                                    <div class="col-3">
+                                        <label class="control-label mb-1">#{administrador_inventario.lbl_id_material}</label>
+                                        <div class="form-control">#{inventarioController.materialSeleccionado.id}</div>
                                     </div>
-                                    <div class="form-group row">                                        
-                                        <div class="col-6">
-                                            <label class="control-label mb-1">Estado:</label>
-                                            <h:selectOneRadio id="genero" value="#{inventarioController.materialSeleccionado.estado}"
-                                                              class="form-control">
-                                                <f:selectItem itemValue="BUENO" itemLabel="Bueno&nbsp;&nbsp;"/>
-                                                <f:selectItem itemValue="MALO" itemLabel="Malo&nbsp;&nbsp;"/>
-                                            </h:selectOneRadio>
-                                        </div>
-                                        <div class="col-6">
-                                            <label class="control-label mb-1">Disponibilidad:</label>
-                                            <h:selectOneMenu id="estado" value="#{inventarioController.materialSeleccionado.disponilidad}"
-                                                             class="form-control">
-                                                <f:selectItem itemValue="" itemLabel="Seleccione si se encuentra disponible"/>
-                                                <f:selectItems value="#{inventarioController.estadoMaterialList}" var="t" itemLabel="#{t.estado}"/>                                            
-                                            </h:selectOneMenu>  
-                                        </div>
+                                    <div class="col-3">
+                                        <label class="control-label mb-1">#{administrador_inventario.lbl_tipo_material}</label>
+                                        <h:inputText id="tipoMaterial" value="#{inventarioController.materialSeleccionado.tipoMaterial}"
+                                                     class="form-control" a:type="text"/>
                                     </div>
-                                </h:form>
+                                    <div class="col-3">
+                                        <label class="control-label mb-1">#{administrador_inventario.lbl_cantidad}</label>
+                                        <h:inputText id="cantidad" value="#{inventarioController.materialSeleccionado.cantidad}"
+                                                     class="form-control" a:type="number" maxlength="100" />
+                                    </div>
+                                </div>
+                                <div class="form-group row">                                        
+                                    <div class="col-6">
+                                        <label class="control-label mb-1">#{administrador_inventario.lbl_estado}</label>
+                                        <h:selectOneRadio id="genero" value="#{inventarioController.materialSeleccionado.estado}"
+                                                          class="form-control">
+                                            <f:selectItem itemValue="BUENO" itemLabel="Bueno&nbsp;&nbsp;"/>
+                                            <f:selectItem itemValue="MALO" itemLabel="Malo&nbsp;&nbsp;"/>
+                                        </h:selectOneRadio>
+                                    </div>
+                                    <div class="col-6">
+                                        <label class="control-label mb-1">#{administrador_inventario.lbl_disponibilidad}</label>
+                                        <h:selectOneMenu id="estado" value="#{inventarioController.materialSeleccionado.disponilidad}"
+                                                         class="form-control">
+                                            <f:selectItem itemValue="" itemLabel="#{administrador_inventario.lbl_seleccionar}"/>
+                                            <f:selectItems value="#{inventarioController.estadoMaterialList}" var="t" itemLabel="#{t.estado}"/>                                            
+                                        </h:selectOneMenu>  
+                                    </div>
+                                </div>                                    
+
                             </div>
                             <div class="modal-footer">
-                                <button type="button" class="btn btn-danger letra-boton" data-dismiss="modal">Cerrar</button>
-                                <h:commandLink actionListener="#{inventarioController.actualizar()}" class="btn btn-primary">Actualizar</h:commandLink> 
+                                <button type="button" class="btn btn-danger letra-boton" data-dismiss="modal">#{administrador_inventario.lbl_cerrar}</button>
+                                <h:commandLink actionListener="#{inventarioController.actualizar()}" class="btn btn-primary">#{administrador_inventario.lbl_actualizar}</h:commandLink> 
                             </div>
                         </div>
                     </h:panelGroup>
@@ -211,17 +243,17 @@
                 <h:form prependId="false">
                     <h:panelGroup id="modalEliminarMaterialContent" class="modal-content" layout="block" >
                         <div class="modal-header">
-                            <h5 class="modal-title" id="mediumModalLabel">Eliminar el material seleccionado</h5>
+                            <h5 class="modal-title" id="mediumModalLabel">#{administrador_inventario.lbl_seleccionar}</h5>
                             <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                 <span aria-hidden="true">&times;</span>
                             </button>
                         </div>
                         <div class="modal-body">
-                            <p>¿Está seguro de eliminar la solictiud #{inventarioController.materialSeleccionado.tipoMaterial} definitivamente del sistema?</p>                                                             
+                            <p>#{administrador_inventario.lbl_esta_seguro} #{inventarioController.materialSeleccionado.tipoMaterial} #{administrador_inventario.lbl_esta_seguro_e}</p>                                                             
                         </div>
                         <div class="modal-footer">
-                            <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-                            <h:commandLink class="btn btn-danger" actionListener="#{inventarioController.eliminar()}">Si</h:commandLink>
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">#{administrador_inventario.lbl_no}</button>
+                            <h:commandLink class="btn btn-danger" actionListener="#{inventarioController.eliminar()}">#{administrador_inventario.lbl_eliminar}</h:commandLink>
                         </div>
                     </h:panelGroup>
                 </h:form>
